@@ -123,6 +123,29 @@ public enum FlexDirection {
 				startY += node.getPreferredOuterHeight() + node.getYOffset();
 			}
 		}
+	},
+	/**
+	 * Elements are ordered bottom-to-top
+	 */
+	ROW_REVERSE {
+		@Override
+		public void layout(LayoutState layoutState, ParentRenderNode<?, ?> parentNode,
+				List<RenderNode<?, ?>> children) {
+			float startX = parentNode.getStyle().getPaddingLeft();
+			float startY = parentNode.getStyle().getPaddingTop();
+			
+			for (int i = children.size() - 1; i >= 0; i--) {
+				RenderNode<?, ?> node = children.get(i);
+				node.layout(layoutState);
+				if (!node.isIncludedInLayout()) {
+					continue;
+				}
+
+				node.setRelativeX(startX + node.getXOffset());
+				node.setRelativeY(startY + node.getYOffset());
+				startY += node.getPreferredOuterHeight() + node.getYOffset();
+			}
+		}
 	};
 	
 	/**
