@@ -1,4 +1,5 @@
 [1.6.6-SNAPSHOT]
+- Added row reverse flex direction
 
 [1.6.5]
 - (#72) Fixed support for flipped tiles in Tiled object GID
